=== master

* Emulate NULLS FIRST/LAST ordering on databases that do not natively support it (jeremyevans)

* Do not modify boolean expressions created from string or array if string or array is modified (jeremyevans)

* Make roots and roots_dataset dataset methods instead of class methods in the tree plugin (JelF) (#1554)

* Do not cache dataset SQL if dataset uses subquery that cannot cache SQL (jeremyevans)

* Make Model#=== work correctly for models with composite primary keys (jeremyevans)

* Add Model#pk_equal? as a more descriptive name for Model#=== (AlexWayfer) (#1550)

* Do not push down expression inversion in cases where it may result in incorrect behavior (e.g. ANY/SOME/ALL operators) (jeremyevans) (#1549)

=== 5.13.0 (2018-10-01)

* Support :single_value type in prepared statements (rintaun) (#1547)

* Make Model.all in static_cache plugin accept a block (AlexWayfer, jeremyevans) (#1543)

* Add constant_sql_override extension for overriding SQL used for constants such as CURRENT_TIMESTAMP (celsworth) (#1538)

* Do not cache from_self datasets if options are given (jeremyevans)

=== 5.12.0 (2018-08-31)

* Make constraint_validations extension respect Database#constraint_validations_table setting (jeremyevans)

* Make Sequel.extension load files from gems (jeremyevans)

* Map clob prepared statement argument type to OCI8::CLOB in the oracle adapter (pipistrellka) (#1534)

* Make Model.load_cache public in the static_cache plugin (AlexWayfer) (#1533)

* Enable support for NOWAIT on MariaDB 10.3+ (jeremyevans)

* Enable support for INTERSECT and EXCEPT on MariaDB 10.3+ (jeremyevans)

* Make tactical_eager_loading plugin handle automatic eager loading for associated objects created by eager_graph (jeremyevans)

* Cache eager_graph loader to speed up subsequent loads from the same dataset (jeremyevans)

* Add caller_logging database extension to log callers before queries, useful during development (jeremyevans)
